LolParser.jjt
/** * * * * * * * * *  * * * * * * * * * * * * **\
| * The_Almost_Donerz : CS 153 Compiler Design * |
| * 				 Fall 2014                 * |
\** * * * * * * * * *  * * * * * * * * * * * * **/

options
{
  VISITOR=true;
  MULTI=true;
  DEBUG_PARSER=true;
}

PARSER_BEGIN(LolParser)
import java.io.FileReader;
import java.io.FileNotFoundException;

public class LolParser
{
  public static void main(String args [])
  {
    try
    {  
	    if(args.length >= 1) {
			System.out.println("Reading from file: " +args[0]);
			new LolParser(new FileReader(args[0]));
	    } else {
			System.out.println("Reading from standard input...");
			new LolParser(System.in);
	    }
	} catch (FileNotFoundException fnfe) {
		System.out.println(args[0] + " was not able to be found.");
	}
    
    try
    {
      LolParser.parse();
      //n.dump("");
      System.out.println("---Finished Parsing!---");
    }
    catch (Exception e)
    {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
    }
  }
}
PARSER_END(LolParser)

void parse(): {StringBuffer buf = new StringBuffer();}
{
  < HAI >(<EOL>)*
   (Statement())*
  < KTHXBYE > (<EOL>)*
  < EOF >
}
void Block():{}
{
  (LOOKAHEAD(Statement()) Statement() )+
}

void Statement():{}
{
  Expression()
}
void Expression():{}
{
  AssignmentExpression()
| FlowControlExpression() 
| ArithemticExpression()
| VarDeclareExpression()
| ConstLiteralExpression()
}

void ConstLiteralExpression():{}
{
  < QUOTED_STRING >
| < INTEGER >
}

void AssignmentExpression():{}
{
  <IDENT> "R" Expression()
}	

void VarDeclareExpression():{}
{
  <I> <HAS> <A> <IDENT> (<ITZ> ConstLiteralExpression())?
}

void FlowControlExpression():{}
{
  loop()
| ifThen()
}

// vvv Arithemic Operations vvv \\
void ArithemticExpression():{}
{
  SUM() 	// Add
| DIFF() 	// Subtract
| PRODUKT() // Product
| QUOSHUNT()// Quotient
| MOD() 	// Modulous
| BIGGR() 	// Max
| SMALLR() 	// Min
| UP()          // Increment
}
void SUM(): {} 	// Add
{
	<SUM> <OF> <INTEGER> <AN> <INTEGER>
}
void DIFF(): {} // Subtract
{
  <DIFF> <OF> <INTEGER> <AN> <INTEGER>	
}
void PRODUKT(): {} // Product
{
	<PRODUKT> <OF> <INTEGER> <AN> <INTEGER>
}
void QUOSHUNT(): {} // Quotient
{
  <QUOSHUNT> <OF> <INTEGER> <AN> <INTEGER>	
}
void MOD(): {} // Modulous
{
	<MOD> <OF> <INTEGER> <AN> <INTEGER>
}
void BIGGR(): {} // Max
{
	<BIGGR> <OF> <INTEGER> <AN> <INTEGER>
}
void SMALLR(): {} // Min
{
	<SMALLR> <OF> <INTEGER> <AN> <INTEGER>
}
void UP():{}
{
        <UP> <IDENT> <BANG> <INTEGER>
}

// ^^^ Arithemic Expressions ^^^ \\



// vvv Boolean Expressions vvv \\
void BooleanOperation():{}{  BOTH() // And
| EITHER() // Or
| WON() // Xor
| NOT() // Not	}
void BOTH():{} // And
{
  <BOTH> <OF> Expression() (<AN>)? Expression()
}
void EITHER():{} // Or
{
  <EITHER> <OF> Expression() (<AN>)? Expression()
}
void WON():{} // Xor
{
  <WON> <OF> Expression() (<AN>)? Expression()
}
void NOT():{} // Not
{
  <NOT> Expression()
}
// ^^^ Boolean Expressions ^^^ \\

void ComparisionOperation():{}{
  BOTHSAEM() // Equals
| DIFFRINT() // Not Equals}
void BOTHSAEM():{}
{
  <BOTH> <SAEM> Expression() (<AN>)? Expression()}
void DIFFRINT():{}
{	<DIFFRINT> Expression() (<AN>)? Expression()
}

// vvv Flow Expressions vvv \\

void loop(): {}
{
  {System.out.println("<LOOP>");}    
     <IM><IN><YR> <LOOP_LABEL>//(<LOOP_OP> <YR> <IDENT> ((<TIL>|<WILE>) Expression() )?)?
     	Block()
  <IM><OUTTA><YR> <LOOP_LABEL>
  {System.out.println("<LOOP>");}
}

void ifThen():{}
{
  < O_RLY ><QUESTION>
  	< YA_RLY >
  		Block()
    < NO_WAI >
    	Block()	
  < OIC >
}

// ^^^ LOOP ^^^ \\

SKIP :
{
  " "
| <EOLIGNORE:<EOL>>
| < COMMENT : ("BTW" (~["\n"])* "\n") >
| "OBTW" : COMMENT_OPEN

//| < MULTI_LINE_COMMENT:        "OBTW" (~[<TLDR>])* <TLDR>        >
}

< COMMENT_OPEN > SKIP :
{
 "TLDR" : DEFAULT
}

< COMMENT_OPEN > MORE:
{
 < ~[] >
}


TOKEN :
{
  < HAI : "HAI" >
| < CAN : "CAN" >
| < HAS : "HAS" >
| <ITZ : "ITZ">
| < A : "A" >
| < I : "I" >
| < N : "N" >
| < IM : "IM" >
| < IN : "IN" >
| < IZ : "IZ" >
| < YR : "YR" >
| < UP : "UP" >
| < KTHX : "KTHX" >
| < KTHXBYE : "KTHXBYE" >
| < LOOP_LABEL : "LOOP" >
| < LOOP_OP : "UPPIN" | "NERFIN">
| < TROOF : "TROOF">
| < FAIL : "FAIL">
| < BOTH : "BOTH" >
| < EITHER : "EITHER" >
| < SAEM : "SAEM" >
| < DIFFRINT : "DIFFRINT" >
| < WON: "WON" >
| < NOT: "NOT" >
| < TIL : "TIL" >
| < WILE : "WILE" > 
| < THAN : "THAN" >
| < OUTTA : "OUTTA" >
| < BIGGER : "BIGGER" >
| < GIMMEH : "GIMMEH" >
| < PLZ : "PLZ" >
| < AWSUM_THX : "AWSUM THX" >
| < O_NOES : "O NOES" >
| < O_RLY : "O RLY" >
| < YA_RLY : "YA RLY" >
| < MEBBE : "MEBBE" >
| < NO_WAI : "NO WAI" >
| < OIC : "OIC" >
| < OPEN : "OPEN" >
| < QUESTION : "?" >
| < VISIBLE : "VISIBLE" >
| < INVISIBLE : "INVISIBLE" >
| < BANG : "!!" >
| < OF : "OF" >
| < AN : "AN" >
| < SUM : "SUM" >
| < DIFF : "DIFF" >
| < PRODUKT : "PRODUKT" >
| < QUOSHUNT : "QUOSHUNT" >
| < MOD : "MOD" >
| < BIGGR : "BIGGR" >
| < SMALLR : "SMALLR" >
| < QUOTED_STRING : "\"" (~["\""])+ "\"" >
| < INTEGER : ["1"-"9"] (["0"-"9"])* >
| < IDENT : (["A"-"Z"] | ["a"-"z"])+ >
| < EOL : "\n" | "\r" | "\r\n" >
| < TLDR : "TLDR">
}



