src/lolparser/frontend/LolParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. LolParser.java */
package lolparser.frontend;

import java.io.FileReader;
import java.io.FileNotFoundException;

public class LolParser/*@bgen(jjtree)*/implements LolParserTreeConstants, LolParserConstants {/*@bgen(jjtree)*/
  protected static JJTLolParserState jjtree = new JJTLolParserState();public static void main(String args [])
  {
    try
    {
            if(args.length >= 1) {
                        System.out.println("Reading from file: " +args[0]);
                        new LolParser(new FileReader(args[0]));
            } else {
                        System.out.println("Reading from standard input...");
                        new LolParser(System.in);
            }
        } catch (FileNotFoundException fnfe) {
                System.out.println(args[0] + " was not able to be found.");
        }

    try
    {
      System.out.printf("/--- Parsing %s ---\u005c\u005c\u005cn", args[0]);
      SimpleNode n = LolParser.parse();
      n.dump("");
      System.out.println("---Finished Parsing!---");
    }
    catch (ParseException pe)
    {
      pe.printStackTrace();
    }
    catch (Exception e)
    {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
    }
  }

  static final public SimpleNode parse() throws ParseException {
                     /*@bgen(jjtree) parse */
  SimpleNode jjtn000 = new SimpleNode(JJTPARSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(HAI);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EOL:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        jj_consume_token(EOL);
      }
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case I:
        case IM:
        case UP:
        case O_RLY:
        case SUM:
        case DIFF:
        case PRODUKT:
        case QUOSHUNT:
        case MOD:
        case BIGGR:
        case SMALLR:
        case QUOTED_STRING:
        case INTEGER:
        case IDENT:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_2;
        }
        Statement();
      }
      jj_consume_token(KTHXBYE);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EOL:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_3;
        }
        jj_consume_token(EOL);
      }
      jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void Block() throws ParseException {
    label_4:
    while (true) {
      Statement();
      if (jj_2_1(2)) {
        ;
      } else {
        break label_4;
      }
    }
  }

  static final public void Statement() throws ParseException {
    Expression();
  }

  static final public void Expression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENT:
      AssignmentExpression();
      break;
    case IM:
    case O_RLY:
      FlowControlExpression();
      break;
    case UP:
    case SUM:
    case DIFF:
    case PRODUKT:
    case QUOSHUNT:
    case MOD:
    case BIGGR:
    case SMALLR:
      ArithemticExpression();
      break;
    case I:
      VarDeclareExpression();
      break;
    case QUOTED_STRING:
    case INTEGER:
      ConstLiteralExpression();
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ConstLiteralExpression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case QUOTED_STRING:
      jj_consume_token(QUOTED_STRING);
      break;
    case INTEGER:
      jj_consume_token(INTEGER);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void AssignmentExpression() throws ParseException {
                             /*@bgen(jjtree) AssignmentExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTASSIGNMENTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IDENT);
      jj_consume_token(1);
      Expression();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void VarDeclareExpression() throws ParseException {
                             /*@bgen(jjtree) VarDeclareExpression */
  SimpleNode jjtn000 = new SimpleNode(JJTVARDECLAREEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(I);
      jj_consume_token(HAS);
      jj_consume_token(A);
      jj_consume_token(IDENT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ITZ:
        jj_consume_token(ITZ);
        ConstLiteralExpression();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void FlowControlExpression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IM:
      loop();
      break;
    case O_RLY:
      ifThen();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// vvv Arithemic Operations vvv \\
  static final public void ArithemticExpression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SUM:
      SUM();
      break;
    case DIFF:
      DIFF();
      break;
    case PRODUKT:
      PRODUKT();
      break;
    case QUOSHUNT:
      QUOSHUNT();
      break;
    case MOD:
      MOD();
      break;
    case BIGGR:
      BIGGR();
      break;
    case SMALLR:
      SMALLR();
      break;
    case UP:
      UP();
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void SUM() throws ParseException {
 /*@bgen(jjtree) SUM */
  SimpleNode jjtn000 = new SimpleNode(JJTSUM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SUM);
      jj_consume_token(OF);
      jj_consume_token(INTEGER);
      jj_consume_token(AN);
      jj_consume_token(INTEGER);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void DIFF() throws ParseException {
              /*@bgen(jjtree) DIFF */
  SimpleNode jjtn000 = new SimpleNode(JJTDIFF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(DIFF);
      jj_consume_token(OF);
      jj_consume_token(INTEGER);
      jj_consume_token(AN);
      jj_consume_token(INTEGER);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void PRODUKT() throws ParseException {
                 /*@bgen(jjtree) PRODUKT */
  SimpleNode jjtn000 = new SimpleNode(JJTPRODUKT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(PRODUKT);
      jj_consume_token(OF);
      jj_consume_token(INTEGER);
      jj_consume_token(AN);
      jj_consume_token(INTEGER);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void QUOSHUNT() throws ParseException {
                  /*@bgen(jjtree) QUOSHUNT */
  SimpleNode jjtn000 = new SimpleNode(JJTQUOSHUNT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(QUOSHUNT);
      jj_consume_token(OF);
      jj_consume_token(INTEGER);
      jj_consume_token(AN);
      jj_consume_token(INTEGER);
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void MOD() throws ParseException {
             /*@bgen(jjtree) MOD */
  SimpleNode jjtn000 = new SimpleNode(JJTMOD);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MOD);
      jj_consume_token(OF);
      jj_consume_token(INTEGER);
      jj_consume_token(AN);
      jj_consume_token(INTEGER);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void BIGGR() throws ParseException {
               /*@bgen(jjtree) BIGGR */
  SimpleNode jjtn000 = new SimpleNode(JJTBIGGR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(BIGGR);
      jj_consume_token(OF);
      jj_consume_token(INTEGER);
      jj_consume_token(AN);
      jj_consume_token(INTEGER);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void SMALLR() throws ParseException {
                /*@bgen(jjtree) SMALLR */
  SimpleNode jjtn000 = new SimpleNode(JJTSMALLR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SMALLR);
      jj_consume_token(OF);
      jj_consume_token(INTEGER);
      jj_consume_token(AN);
      jj_consume_token(INTEGER);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void UP() throws ParseException {
           /*@bgen(jjtree) UP */
  SimpleNode jjtn000 = new SimpleNode(JJTUP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(UP);
      jj_consume_token(IDENT);
      jj_consume_token(BANG);
      jj_consume_token(INTEGER);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

// ^^^ Arithemic Expressions ^^^ \\



// vvv Boolean Expressions vvv \\
  static final public void BooleanOperation() throws ParseException {
                         /*@bgen(jjtree) BooleanOperation */
  SimpleNode jjtn000 = new SimpleNode(JJTBOOLEANOPERATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOTH:
        BOTH();
        break;
      case EITHER:
        EITHER();
        break;
      case WON:
        WON();
        break;
      case NOT:
        NOT();
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void BOTH() throws ParseException {
             /*@bgen(jjtree) BOTH */
  SimpleNode jjtn000 = new SimpleNode(JJTBOTH);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(BOTH);
      jj_consume_token(OF);
      Expression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AN:
        jj_consume_token(AN);
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      Expression();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void EITHER() throws ParseException {
               /*@bgen(jjtree) EITHER */
  SimpleNode jjtn000 = new SimpleNode(JJTEITHER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(EITHER);
      jj_consume_token(OF);
      Expression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AN:
        jj_consume_token(AN);
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      Expression();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void WON() throws ParseException {
            /*@bgen(jjtree) WON */
  SimpleNode jjtn000 = new SimpleNode(JJTWON);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WON);
      jj_consume_token(OF);
      Expression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AN:
        jj_consume_token(AN);
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      Expression();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void NOT() throws ParseException {
            /*@bgen(jjtree) NOT */
  SimpleNode jjtn000 = new SimpleNode(JJTNOT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(NOT);
      Expression();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

// ^^^ Boolean Expressions ^^^ \\
  static final public void ComparisionOperation() throws ParseException {
                             /*@bgen(jjtree) ComparisionOperation */
  SimpleNode jjtn000 = new SimpleNode(JJTCOMPARISIONOPERATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOTH:
        BOTHSAEM();
        break;
      case DIFFRINT:
        DIFFRINT();
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void BOTHSAEM() throws ParseException {
                 /*@bgen(jjtree) BOTHSAEM */
  SimpleNode jjtn000 = new SimpleNode(JJTBOTHSAEM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(BOTH);
      jj_consume_token(SAEM);
      Expression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AN:
        jj_consume_token(AN);
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      Expression();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void DIFFRINT() throws ParseException {
                 /*@bgen(jjtree) DIFFRINT */
  SimpleNode jjtn000 = new SimpleNode(JJTDIFFRINT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(DIFFRINT);
      Expression();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AN:
        jj_consume_token(AN);
        break;
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      Expression();
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

// vvv Flow Expressions vvv \\
  static final public void loop() throws ParseException {
              /*@bgen(jjtree) loop */
  SimpleNode jjtn000 = new SimpleNode(JJTLOOP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IM);
      jj_consume_token(IN);
      jj_consume_token(YR);
      jj_consume_token(LOOP_LABEL);
      Block();
      jj_consume_token(IM);
      jj_consume_token(OUTTA);
      jj_consume_token(YR);
      jj_consume_token(LOOP_LABEL);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void ifThen() throws ParseException {
               /*@bgen(jjtree) ifThen */
  SimpleNode jjtn000 = new SimpleNode(JJTIFTHEN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(O_RLY);
      jj_consume_token(QUESTION);
      jj_consume_token(YA_RLY);
      Block();
      jj_consume_token(NO_WAI);
      Block();
      jj_consume_token(OIC);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_3R_31() {
    if (jj_scan_token(PRODUKT)) return true;
    if (jj_scan_token(OF)) return true;
    return false;
  }

  static private boolean jj_3R_32() {
    if (jj_scan_token(QUOSHUNT)) return true;
    if (jj_scan_token(OF)) return true;
    return false;
  }

  static private boolean jj_3R_16() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(60)) {
    jj_scanpos = xsp;
    if (jj_scan_token(61)) return true;
    }
    return false;
  }

  static private boolean jj_3R_11() {
    if (jj_3R_16()) return true;
    return false;
  }

  static private boolean jj_3R_29() {
    if (jj_scan_token(SUM)) return true;
    if (jj_scan_token(OF)) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3R_9() {
    if (jj_3R_14()) return true;
    return false;
  }

  static private boolean jj_3R_30() {
    if (jj_scan_token(DIFF)) return true;
    if (jj_scan_token(OF)) return true;
    return false;
  }

  static private boolean jj_3R_8() {
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_7() {
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3R_6() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_7()) {
    jj_scanpos = xsp;
    if (jj_3R_8()) {
    jj_scanpos = xsp;
    if (jj_3R_9()) {
    jj_scanpos = xsp;
    if (jj_3R_10()) {
    jj_scanpos = xsp;
    if (jj_3R_11()) return true;
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_5() {
    if (jj_3R_6()) return true;
    return false;
  }

  static private boolean jj_3R_26() {
    if (jj_3R_36()) return true;
    return false;
  }

  static private boolean jj_3R_25() {
    if (jj_3R_35()) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_5()) return true;
    return false;
  }

  static private boolean jj_3R_24() {
    if (jj_3R_34()) return true;
    return false;
  }

  static private boolean jj_3R_23() {
    if (jj_3R_33()) return true;
    return false;
  }

  static private boolean jj_3R_22() {
    if (jj_3R_32()) return true;
    return false;
  }

  static private boolean jj_3R_28() {
    if (jj_scan_token(O_RLY)) return true;
    if (jj_scan_token(QUESTION)) return true;
    return false;
  }

  static private boolean jj_3R_21() {
    if (jj_3R_31()) return true;
    return false;
  }

  static private boolean jj_3R_20() {
    if (jj_3R_30()) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_19()) {
    jj_scanpos = xsp;
    if (jj_3R_20()) {
    jj_scanpos = xsp;
    if (jj_3R_21()) {
    jj_scanpos = xsp;
    if (jj_3R_22()) {
    jj_scanpos = xsp;
    if (jj_3R_23()) {
    jj_scanpos = xsp;
    if (jj_3R_24()) {
    jj_scanpos = xsp;
    if (jj_3R_25()) {
    jj_scanpos = xsp;
    if (jj_3R_26()) return true;
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_3R_29()) return true;
    return false;
  }

  static private boolean jj_3R_36() {
    if (jj_scan_token(UP)) return true;
    if (jj_scan_token(IDENT)) return true;
    return false;
  }

  static private boolean jj_3R_35() {
    if (jj_scan_token(SMALLR)) return true;
    if (jj_scan_token(OF)) return true;
    return false;
  }

  static private boolean jj_3R_27() {
    if (jj_scan_token(IM)) return true;
    if (jj_scan_token(IN)) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_3R_28()) return true;
    return false;
  }

  static private boolean jj_3R_13() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) return true;
    }
    return false;
  }

  static private boolean jj_3R_17() {
    if (jj_3R_27()) return true;
    return false;
  }
